# peelo-chrono

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  __utils_8hpp.html  __utils_8hpp_source.html  annotated.html  classes.html  classpeelo_1_1chrono_1_1date-members.html  classpeelo_1_1chrono_1_1date.html  classpeelo_1_1chrono_1_1datetime-members.html  classpeelo_1_1chrono_1_1datetime.html  classpeelo_1_1chrono_1_1duration-members.html  classpeelo_1_1chrono_1_1duration.html  classpeelo_1_1chrono_1_1time-members.html  classpeelo_1_1chrono_1_1time.html  conanfile.py  date_8hpp.html  date_8hpp_source.html  datetime_8hpp.html  datetime_8hpp_source.html  dir_30bb860588f86a592f62c1b922374aed.html  dir_991975b65f4af8a41e40e222270105f4.html  dir_d44c64559bbebec7f509842c48db8b23.html  duration_8hpp.html  duration_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  month_8hpp.html  month_8hpp_source.html  (+11 more)
docs/: annotated.html  classes.html  classpeelo_1_1chrono_1_1date-members.html  classpeelo_1_1chrono_1_1date.html  classpeelo_1_1chrono_1_1datetime-members.html  classpeelo_1_1chrono_1_1datetime.html  classpeelo_1_1chrono_1_1time-members.html  classpeelo_1_1chrono_1_1time.html  classpeelo_1_1date-members.html  classpeelo_1_1date.html  classpeelo_1_1datetime-members.html  classpeelo_1_1time.html  (+35 more)
test/: CMakeLists.txt  main.cpp  test_date.cpp  test_datetime.cpp  test_duration.cpp  test_month.cpp  test_time.cpp  test_weekday.cpp
(+14 files in other folders)
